--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,210 @@
-# Logs
-logs
+# ========================
+# ARCHIVOS DE PRODUCCIÓN
+# ========================
+# Carpetas de build/dist - NUNCA subir a Git
+dist/
+dist-ssr/
+build/
+out/
+.output/
+.nuxt/
+.next/
+.vite/
+
+# ========================
+# DEPENDENCIAS
+# ========================
+# Node modules - NUNCA subir
+node_modules/
+npm-debug.log*
+pnpm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# Lockfiles (opcional: algunos equipos los incluyen)
+# package-lock.json
+# yarn.lock
+# pnpm-lock.yaml
+
+# ========================
+# LOGS Y DEPURACIÓN
+# ========================
+logs/
 *.log
+debug.log
+error.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# ========================
+# VARIABLES DE ENTORNO
+# ========================
+# Archivos de configuración sensible
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.*
+!.env.example
 
-# Editor directories and files
+# ========================
+# CACHE Y TEMPORALES
+# ========================
+# Cache de herramientas
+.cache/
+.parcel-cache/
+.vite-cache/
+.nuxt/
+.next/
+.turbo/
+.webpack/
+*.tsbuildinfo
+.build/
+tmp/
+temp/
+
+# Cache específico de navegadores
+.eslintcache
+.stylelintcache
+
+# ========================
+# EDITORES E IDEs
+# ========================
+# Visual Studio Code
 .vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
 !.vscode/extensions.json
-.idea
+!.vscode/*.code-snippets
+
+# IntelliJ/WebStorm
+.idea/
+*.iws
+*.iml
+*.ipr
+
+# Sublime Text
+*.sublime-workspace
+*.sublime-project
+
+# Vim
+*.swp
+*.swo
+*~
+
+# Emacs
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+
+# ========================
+# SISTEMAS OPERATIVOS
+# ========================
+# macOS
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+*.lnk
+
+# Linux
+*~
+.fuse_hidden*
+.directory
+.Trash-*
+.nfs*
+
+# ========================
+# ARCHIVOS DE PROYECTO
+# ========================
+# Archivos locales específicos
+*.local
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# Reportes de cobertura
+coverage/
+*.lcov
+.nyc_output/
+
+# Documentos generados
+docs/dist/
+storybook-static/
+
+# ========================
+# ARCHIVOS DE DESPLIEGUE
+# ========================
+# Netlify
+.netlify/
+
+# Vercel
+.vercel/
+
+# Firebase
+.firebase/
+firebase-debug.log
+firestore-debug.log
+
+# Surge
+.surge/
+
+# ========================
+# OTROS ARCHIVOS
+# ========================
+# Archivos de respaldo
+*.bak
+*.backup
+*.tmp
+
+# Archivos de sistema
+*.pid
+*.seed
+*.pid.lock
+
+# Runtime data
+pids/
+lib-cov/
+
+# Dependency directories
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional REPL history
+.node_repl_history
+
+# Yarn Integrity file
+.yarn-integrity
+
+# ========================
+# ARCHIVOS ESPECÍFICOS DEL PROYECTO
+# ========================
+# Si tienes archivos específicos de tu CV que no quieres subir
+# cv-*.pdf
+# *.pdf
