--- a/package.json
+++ b/package.json
@@ -7,13 +7,11 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "generate-cv": "node generate-cv.js"
+    "preview": "vite preview"
   },
   "dependencies": {
     "aos": "^2.3.4",
     "lucide-react": "^0.525.0",
-    "puppeteer": "^24.15.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0"
